--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "boostrap": "^2.0.0",
+    "bootstrap": "^5.2.3",
     "mdbootstrap": "^4.20.0",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
