--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "boostrap": "^2.0.0",
     "bootstrap": "^5.2.3",
+    "mdb-ui-kit": "^6.2.0",
     "mdbootstrap": "^4.20.0",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
